force-app/main/default/objects/inspire1__Project_Team__c/inspire1__Project_Team__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - Users and Contacts that have been assigned tasks of a project.</description>
    <label>Project Team</label>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>Team Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>