force-app/main/default/objects/inspire1__Project_Team__c/fields/inspire1__Add_as_Collaborator__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Add_as_Collaborator__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Auto add as collaborator if TRUE.</description>
    <inlineHelpText>Auto add as project collaborator if TRUE and provide Team Member access to the Project based on Permission Level.</inlineHelpText>
    <label>Add as Collaborator</label>
    <type>Checkbox</type>
</CustomField>