force-app/main/default/objects/inspire1__Project_Team__c/fields/inspire1__Collaborator_Permission_Level__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Collaborator_Permission_Level__c</fullName>
    <description>Defines permission level for Collaborator.</description>
    <inlineHelpText>Defines permission level for Collaborator.</inlineHelpText>
    <label>Collaborator Permission Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Viewer</fullName>
                <default>true</default>
                <label>Viewer</label>
            </value>
            <value>
                <fullName>Editor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>