force-app/main/default/objects/inspire1__Project_Team__c/fields/inspire1__Contact__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact that has been assigned to the project.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Teams</relationshipLabel>
    <relationshipName>Project_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>