force-app/main/default/objects/inspire1__Project_Team__c/fields/inspire1__Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Hourly_Rate__c</fullName>
    <label>Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>