force-app/main/default/objects/inspire1__Project_Team__c/fields/inspire1__Project__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project__c</fullName>
    <description>Project the Contact or User has been assigned to.</description>
    <label>Project</label>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>Project Teams</relationshipLabel>
    <relationshipName>Project_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>