force-app/main/default/objects/inspire1__Project_Team__c/fields/inspire1__Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Queue_Name__c</fullName>
    <label>Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>