force-app/main/default/objects/inspire1__Project_Team__c/fields/inspire1__Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Resource_Name__c</fullName>
    <description>Captures the name of the resource.  Formula compares User, Contact, Queue.</description>
    <formula>IF (NOT(ISBLANK( inspire1__User__c )),  inspire1__User__r.FirstName &amp; &quot; &quot; &amp; inspire1__User__r.LastName,
    	 (IF(NOT(ISBLANK( inspire1__Contact__c )),  inspire1__Contact__r.FirstName &amp; &quot; &quot; &amp; inspire1__Contact__r.LastName,
   inspire1__Queue_Name__c)))</formula>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>