force-app/main/default/objects/inspire1__Project_Team__c/fields/inspire1__Role__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Role__c</fullName>
    <description>Defines the role the team member is performing. Used to auto assign tasks when Role is defined on Project Task.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>inspire1__Role</valueSetName>
    </valueSet>
</CustomField>