force-app/main/default/objects/inspire1__Project_Team__c/fields/inspire1__sysAutomatedTeamCreate__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysAutomatedTeamCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sysAutomatedTeamCreate</label>
    <type>Checkbox</type>
</CustomField>