force-app/main/default/objects/inspire1__Project_Team__c/fields/inspire1__sysQueueId__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysQueueId__c</fullName>
    <label>sysQueueId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>