force-app/main/default/objects/inspire1__Project_Team__c/fields/inspire1__Total_Actual_Effort__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Total_Actual_Effort__c</fullName>
    <description>Total number of hours logged by team member for project. Sum of Time Entries logged.</description>
    <inlineHelpText>Total number of hours logged by team member for project.</inlineHelpText>
    <label>Total Actual Effort</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>