force-app/main/default/objects/inspire1__Project_Team__c/fields/inspire1__Total_Planned_Effort__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Total_Planned_Effort__c</fullName>
    <description>Total number of hours assigned to team member for project. Sum of Planned Effort from Salesforce Tasks.</description>
    <inlineHelpText>Total number of hours assigned to team member for project.</inlineHelpText>
    <label>Total Allocated Effort</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>