force-app/main/default/objects/inspire1__Project_Team__c/fields/inspire1__User__c.field-meta.xml
<CustomField>
    <fullName>inspire1__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that has been assigned to the project.</description>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select an appropriate user type.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>notEqual</operation>
            <value>Chatter Free User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>