force-app/main/default/objects/inspire1__Project_Team__c/validationRules/inspire1__User_or_Contact_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>inspire1__User_or_Contact_Required</fullName>
    <active>true</active>
    <description>Enforces user must select either User or Contact.</description>
    <errorConditionFormula>AND( 
  ISBLANK( inspire1__Contact__c ), 
  ISBLANK( inspire1__User__c ),
  ISBLANK( inspire1__Queue_Name__c )
)</errorConditionFormula>
    <errorMessage>You must select either a User, Contact or Queue.</errorMessage>
</ValidationRule>